@@ -78,6 +78,7 @@
     <tr><td>Esc-F</td><td>Focus the folder pane</td></tr>
     <tr><td>Esc-M</td><td>Focus the message pane</td></tr>
     <tr><td>Esc-Esc</td><td>Focus the thread pane</td></tr>
+    <tr><td>Esc-S</td><td>Focus the quick search box</td></tr>
     <tr><td>Ctrl-Left/Right</td>
          <td>Scroll the message from the thread pane</td></tr>
    </table>
